tests/snapshots/conformance__n_structure_open_object_open_string.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
{"a
stdout --- 
<empty>
stderr --- 
error: expected closing quote
 --> stdin:1:3
  |
1 | {"a
  |  -^
  |  |
  |  opening quote found here
  |
help: insert the missing closing quote
  |
1 | {"a"
  |    +
